# Tretiya-practika-freimworki

./: README.md
space_project/: docker-compose.yml  generate_report.sh  отчет 3.docx
space_project/php_web/: package-lock.json  package.json  server.js
space_project/php_web/views/: dashboard.ejs
space_project/rust_iss/: Cargo.toml  Dockerfile
space_project/rust_iss/src/: main.rs
